# apple-stock-prediction

./: README.md  correlation_matrix.xlsx  lstm_raw.md  main.ipynb  model_summary.tex  pyproject.toml  test.ipynb
functions/: __init__.py  functions.py  model_functions.py  trading.py
results/: res_ensemble_svm_scenario_1.parquet  res_ensemble_svm_scenario_2.pq  res_ensemble_svm_scenario_3.pq  res_ensemble_svm_scenario_4.pq  res_ensemble_svm_scenario_5.pq  res_lstm_3.pq  res_lstm_4.pq  res_lstm_5.pq  res_lstm_scenario_1.pq  res_lstm_scenario_2.pq  res_lstm_scenario_3.pq  res_lstm_scenario_4.pq  res_lstm_scenario_5.pq  res_svm_2.pq  res_svm_scenario_1.parquet  res_svm_scenario_2.pq  res_svm_scenario_3.pq  res_svm_scenario_4.pq  res_svm_scenario_5.pq  results_lstm_scenario_1.csv  summary_results_trading.pq  trading_lstm_1_frac.pq  trading_lstm_1_full.pq  trading_lstm_2_frac.pq  trading_lstm_2_full.pq  trading_lstm_3_frac.pq  trading_lstm_3_full.pq  trading_lstm_4_frac.pq  trading_lstm_4_full.pq  trading_lstm_5_frac.pq  trading_lstm_5_full.pq
scripts/: compute_sentiment_analysis.py  data_collection.py
tab/: arch_1_results.tex  f1_table.tex  head_df.tex  mean_f1_lstm.tex  strategy_stats.tex  summary_results.tex  tbl_msg_stats.tex  tbl_sentiment_scores_ttest.tex  tbl_sentiment_summary.tex
