[project]
name = "mon-projet-ds"
version = "0.1.0"
description = "Template de projet data science"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "ipykernel",
    "black",
    "ruff",
    "pandas>=2.2.3",
    "numpy>=2.2.5",
    "yfinance>=0.2.55",
    "fastparquet>=2024.11.0",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "nbformat>=4.2.0",
    "ipython>=8.35.0",
    "statsmodels>=0.14.4",
    "plotnine>=0.14.5",
    "mplfinance>=0.12.10b0",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "arch>=7.2.0",
    "tabulate>=0.9.0",
    "isort>=6.0.1",
    "pandoc>=2.4",
    "quarto>=0.1.0",
    "pmdarima>=2.0.4",
    "curl-cffi>=0.10.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
  \.venv
  | \.git
  | __pycache__
  | \.ipynb_checkpoints
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "B", "I"]  # E = erreurs, F = flakes, B = bugbear, I = isort
fix = true

[tool.ruff.lint]
ignore = ["E501"]  # Ignorer les lignes trop longues
